--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div id="app"></div>
+    <div id="watermark">Created with 💖 by Benjamin H.</div>
     <script src="src/index.ts" type="module"></script>
 </body>
 </html>
